data for R1, update README, updated notebooks to prepare for release

--- a/py_notebooks/figure1.ipynb
+++ b/py_notebooks/figure1.ipynb
@@ -2,17 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using /mnt/c/Users/jacqu/Dropbox/Benson_Lab/grid/publications/city_scale_experiments/code_submission as REPO_PATH\n",
+      "The history saving thread hit an unexpected error (OperationalError('disk I/O error',)).History will not be written to the database.\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import os\n",
     "REPO_PATH = os.getenv('REPO_PATH')\n",
     "print(\"Using %s as REPO_PATH\" % REPO_PATH)\n",
-    "sys.path.insert(0, REPO_PATH+\"/py_notebooks/\")\n",
+    "sys.path.insert(0, os.path.join(REPO_PATH,\"py_notebooks/\"))\n",
     "figFolder = os.path.join(REPO_PATH, \"py_notebooks/figures/\")\n",
     "\n",
     "import pandas as pd\n",
@@ -48,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -135,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -147,29 +156,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CW_GJ</th>\n",
+       "      <th>HW_GJ</th>\n",
+       "      <th>CampusElec_GJ</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2015-07-01 00:00:00</th>\n",
+       "      <td>127.963353</td>\n",
+       "      <td>34.213767</td>\n",
+       "      <td>79.958886</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-07-01 01:00:00</th>\n",
+       "      <td>120.043524</td>\n",
+       "      <td>34.982950</td>\n",
+       "      <td>77.730973</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-07-01 02:00:00</th>\n",
+       "      <td>112.699037</td>\n",
+       "      <td>34.116766</td>\n",
+       "      <td>75.998624</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-07-01 03:00:00</th>\n",
+       "      <td>102.982891</td>\n",
+       "      <td>34.076734</td>\n",
+       "      <td>75.627212</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-07-01 04:00:00</th>\n",
+       "      <td>95.730250</td>\n",
+       "      <td>28.833297</td>\n",
+       "      <td>75.920346</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          CW_GJ      HW_GJ  CampusElec_GJ\n",
+       "Date                                                     \n",
+       "2015-07-01 00:00:00  127.963353  34.213767      79.958886\n",
+       "2015-07-01 01:00:00  120.043524  34.982950      77.730973\n",
+       "2015-07-01 02:00:00  112.699037  34.116766      75.998624\n",
+       "2015-07-01 03:00:00  102.982891  34.076734      75.627212\n",
+       "2015-07-01 04:00:00   95.730250  28.833297      75.920346"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total HW GJ: 1251223.56\n",
+      "Total CW GJ: 1775312.57\n",
+      "45.33% of CW can be met through HRCs\n",
+      "88.12% of HW can be met through HRCs\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.5/site-packages/matplotlib/font_manager.py:1238: UserWarning: findfont: Font family ['sans-serif'] not found. Falling back to DejaVu Sans.\n",
+      "  (prop.get_family(), self.defaultFamily[fontext]))\n"
+     ]
+    }
+   ],
    "source": [
     "figure1(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -188,11 +298,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "803 days in the dataset\n",
+      "Cold: 0.81 PJ\n",
+      "Hot: 0.57 PJ\n",
+      "Elec: 0.75 PJ\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"%d days in the dataset\" % (len(df)/24))\n",
     "print(\"Cold: %.2f PJ\" % (df.CW_GJ.sum()/1e6/803*365)) #PJ/year\n",
@@ -202,11 +323,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CW_GJ            0.816892\n",
+      "HW_GJ            0.525836\n",
+      "CampusElec_GJ    1.619769\n",
+      "dtype: float64\n",
+      "CW_GJ            4.897012\n",
+      "HW_GJ            3.693339\n",
+      "CampusElec_GJ    2.370091\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "# Min and max daily requests - from the campus. Data in the paper come from actual operation schedules at the CEP\n",
     "print(df.groupby(df.index.date).sum().min()/1000)\n",
