--- a/py_notebooks/figure7.ipynb
+++ b/py_notebooks/figure7.ipynb
@@ -50,8 +50,11 @@
    "outputs": [],
    "source": [
     "folderNm = os.path.join(REPO_PATH, \"data/jl_out/\")\n",
-    "with open(folderNm+\"ne_storage_sens_json_data\") as data_file:    \n",
+    "#with open(folderNm + \"ne_storage_sens_json_data\") as data_file:\n",
+    "with open(folderNm + \"storage_sens_json_data\") as data_file:\n",
     "    data = json.load(data_file)\n",
+    "# hot_lst = np.linspace(0., 1100., 30) \n",
+    "# cold_lst = np.linspace(0., 120.e3, 30)\n",
     "hot_lst = np.linspace(0., 1100., 30) \n",
     "cold_lst = np.linspace(0., 120.e3, 30)\n"
    ]
@@ -65,6 +68,17 @@
    "outputs": [],
    "source": [
     "data.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "len(data['bill'].keys())"
    ]
   },
   {
@@ -83,7 +97,7 @@
    },
    "outputs": [],
    "source": [
-    "save = True\n",
+    "save = False\n",
     "\n",
     "u['gal_per_ton'] = 10e6/90.e3\n",
     "u['gal_per_mmbtu'] = 2e6/600.\n",
@@ -290,6 +304,15 @@
     "    call(['xvfb-run', 'orca', 'graph', json.dumps(fig, cls=plotly.utils.PlotlyJSONEncoder),\n",
     "      '-o', 'fig7.pdf', '--format', 'pdf'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
